@@ -1,3 +1,13 @@
+2005-11-23  Wim Taymans  <wim@fluendo.com>
+
+	* gst/gsterror.c: (_gst_core_errors_init):
+	* gst/gsterror.h:
+	Add error for clock stuff.
+
+	* gst/gstpipeline.c: (gst_pipeline_change_state),
+	(gst_pipeline_set_clock):
+	Post clock error when clock cannot be used in a pipeline.
+
 2005-11-23  Stefan Kost  <ensonic@users.sf.net>
 
 	* docs/gst/gstreamer-sections.txt:
